# Redacao-enem-CrewIA

./: README.md  Teste_Open.py  Teste_pacotes.py  pyproject.toml
src/: agents.py  task.py
src/enem_crew/: crew.py  main.py
src/enem_crew/config/: agents.yaml  tasks.yaml
