[project]
name = "enem_crew"
version = "0.1.0"
description = "enem_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
enem_crew = "enem_crew.main:run"
run_crew = "enem_crew.main:run"
train = "enem_crew.main:train"
replay = "enem_crew.main:replay"
test = "enem_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
